<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/create_database_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_database"/>

    <Button
        android:id="@+id/add_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:layout_toEndOf="@id/create_database_button"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/delete_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_contact"
        android:layout_below="@id/create_database_button"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/get_contacts_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_contacts"
        android:layout_below="@id/create_database_button"
        android:layout_toEndOf="@id/delete_contact_button"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@id/delete_contact_button"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/name_edit_text"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/id_to_delete_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_to_delete"
        android:layout_below="@id/email_edit_text"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/delete_database_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_database"
        android:layout_below="@id/id_to_delete_edit_text"/>

    <EditText
        android:id="@+id/contacts_list_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="8"
        android:ems="10"
        android:layout_below="@id/delete_database_button"/>

</RelativeLayout>
